[package]
name = "fsync"
version = "0.1.0"
edition = "2024"

[dependencies]
directories = "6.0.0"
env_logger = "0.11.8"
log = "0.4.29"
rustls = "0.23.36"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-rustls = "0.26.4"
toml = "0.9.11"
